Bug 1739784 - Fix nsIMsgFolder.getUriForMsg, nsIMsgMessengerService.DisplayMessage and nsIMsgMessengerServices.streamMessage to handle non-ascii URIs. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D130554

--HG--
extra : moz-landing-system : lando